// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renderCSharp matches the snapshot for multi-version.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer Hightouch.Events.CSharp v0.0.6 or later.

using System;

using System.Collections;

using System.Collections.Generic;

using Hightouch.Events.Serialization;

using AnalyticsClient = Hightouch.Events.Analytics;

namespace Analytics
{
    public class TrackOrderCompletedV1
    {
        public object orderId;
    }

    public class TrackOrderCompletedV2
    {
        public object orderId;
        public object total;
    }

    public sealed class HtEvents
    {
        private readonly AnalyticsClient _analytics;



        public HtEvents(AnalyticsClient analytics)

        {

            _analytics = analytics;

        }



        private static Dictionary<string, object> CloneMap(Dictionary<string, object> map)
        {
            var clone = new Dictionary<string, object>();
            if (map == null)
            {
                return clone;
            }
            foreach (var entry in map)
            {
                clone[entry.Key] = entry.Value;
            }
            return clone;
        }

        private static Dictionary<string, object> SetAtPath(Dictionary<string, object> root, string[] path, string value)
        {
            if (path == null || path.Length == 0)
            {
                return root;
            }
            var clone = CloneMap(root);
            var cursor = clone;
            for (var i = 0; i < path.Length - 1; i++)
            {
                var key = path[i];
                Dictionary<string, object> child;
                if (cursor.TryGetValue(key, out var existing) && existing is Dictionary<string, object> dict)
                {
                    child = CloneMap(dict);
                }
                else
                {
                    child = new Dictionary<string, object>();
                }
                cursor[key] = child;
                cursor = child;
            }
            cursor[path[path.Length - 1]] = value;
            return clone;
        }

        private static Dictionary<string, object> ToMap(object value)
        {
            var result = new Dictionary<string, object>();
            if (value == null)
            {
                return result;
            }
            if (value is Dictionary<string, object> dict)
            {
                return CloneMap(dict);
            }
            foreach (var field in value.GetType().GetFields())
            {
                var fieldValue = field.GetValue(value);
                if (fieldValue == null)
                {
                    continue;
                }
                result[field.Name] = fieldValue;
            }
            return result;
        }

        private static JsonElement ToJsonElement(object value)
        {
            switch (value)
            {
                case null:
                    return JsonNull.Instance;
                case JsonElement element:
                    return element;
                case string s:
                    return s;
                case bool b:
                    return b;
                case byte n:
                    return (int)n;
                case short n:
                    return n;
                case int n:
                    return n;
                case long n:
                    return n;
                case float n:
                    return n;
                case double n:
                    return n;
                case decimal n:
                    return (double)n;
                case Dictionary<string, object> dict:
                    return ToJsonObject(dict);
                case IDictionary map:
                {
                    var nested = new Dictionary<string, object>();
                    foreach (DictionaryEntry entry in map)
                    {
                        if (entry.Key == null || entry.Value == null)
                        {
                            continue;
                        }
                        nested[entry.Key.ToString()] = entry.Value;
                    }
                    return ToJsonObject(nested);
                }
                default:
                    return value.ToString();
            }
        }

        private static JsonObject ToJsonObject(Dictionary<string, object> data)
        {
            var obj = new JsonObject();
            if (data == null)
            {
                return obj;
            }
            foreach (var entry in data)
            {
                obj[entry.Key] = ToJsonElement(entry.Value);
            }
            return obj;
        }

        private static Dictionary<string, object> WithSchemaVersion(Dictionary<string, object> data, string[] path, string version, string envelopeKey)
        {
            if (path == null || path.Length == 0)
            {
                return data;
            }
            var head = path[0];
            if (head == envelopeKey)
            {
                var rest = new string[path.Length - 1];
                Array.Copy(path, 1, rest, 0, rest.Length);
                return SetAtPath(CloneMap(data), rest, version);
            }
            return data;
        }

        public void TrackOrderCompletedV1(TrackOrderCompletedV1 properties)
        {
            var data = WithSchemaVersion(ToMap(properties), new string[] {}, "v1", "properties");
            _analytics.Track("Order Completed", ToJsonObject(data));
        }

        public void TrackOrderCompletedV2(TrackOrderCompletedV2 properties)
        {
            var data = WithSchemaVersion(ToMap(properties), new string[] {}, "v2", "properties");
            _analytics.Track("Order Completed", ToJsonObject(data));
        }

        public void TrackOrderCompleted(TrackOrderCompletedV2 properties)
        {
            TrackOrderCompletedV2(properties);
        }
    }
}
"
`;

exports[`renderCSharp matches the snapshot for simple-track.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer Hightouch.Events.CSharp v0.0.6 or later.

using System;

using System.Collections;

using System.Collections.Generic;

using Hightouch.Events.Serialization;

using AnalyticsClient = Hightouch.Events.Analytics;

namespace Analytics
{
    public class TrackOrderCompletedDefault
    {
        public object orderId;
        public object total;
    }

    public sealed class HtEvents
    {
        private readonly AnalyticsClient _analytics;



        public HtEvents(AnalyticsClient analytics)

        {

            _analytics = analytics;

        }



        private static Dictionary<string, object> CloneMap(Dictionary<string, object> map)
        {
            var clone = new Dictionary<string, object>();
            if (map == null)
            {
                return clone;
            }
            foreach (var entry in map)
            {
                clone[entry.Key] = entry.Value;
            }
            return clone;
        }

        private static Dictionary<string, object> SetAtPath(Dictionary<string, object> root, string[] path, string value)
        {
            if (path == null || path.Length == 0)
            {
                return root;
            }
            var clone = CloneMap(root);
            var cursor = clone;
            for (var i = 0; i < path.Length - 1; i++)
            {
                var key = path[i];
                Dictionary<string, object> child;
                if (cursor.TryGetValue(key, out var existing) && existing is Dictionary<string, object> dict)
                {
                    child = CloneMap(dict);
                }
                else
                {
                    child = new Dictionary<string, object>();
                }
                cursor[key] = child;
                cursor = child;
            }
            cursor[path[path.Length - 1]] = value;
            return clone;
        }

        private static Dictionary<string, object> ToMap(object value)
        {
            var result = new Dictionary<string, object>();
            if (value == null)
            {
                return result;
            }
            if (value is Dictionary<string, object> dict)
            {
                return CloneMap(dict);
            }
            foreach (var field in value.GetType().GetFields())
            {
                var fieldValue = field.GetValue(value);
                if (fieldValue == null)
                {
                    continue;
                }
                result[field.Name] = fieldValue;
            }
            return result;
        }

        private static JsonElement ToJsonElement(object value)
        {
            switch (value)
            {
                case null:
                    return JsonNull.Instance;
                case JsonElement element:
                    return element;
                case string s:
                    return s;
                case bool b:
                    return b;
                case byte n:
                    return (int)n;
                case short n:
                    return n;
                case int n:
                    return n;
                case long n:
                    return n;
                case float n:
                    return n;
                case double n:
                    return n;
                case decimal n:
                    return (double)n;
                case Dictionary<string, object> dict:
                    return ToJsonObject(dict);
                case IDictionary map:
                {
                    var nested = new Dictionary<string, object>();
                    foreach (DictionaryEntry entry in map)
                    {
                        if (entry.Key == null || entry.Value == null)
                        {
                            continue;
                        }
                        nested[entry.Key.ToString()] = entry.Value;
                    }
                    return ToJsonObject(nested);
                }
                default:
                    return value.ToString();
            }
        }

        private static JsonObject ToJsonObject(Dictionary<string, object> data)
        {
            var obj = new JsonObject();
            if (data == null)
            {
                return obj;
            }
            foreach (var entry in data)
            {
                obj[entry.Key] = ToJsonElement(entry.Value);
            }
            return obj;
        }

        private static Dictionary<string, object> WithSchemaVersion(Dictionary<string, object> data, string[] path, string version, string envelopeKey)
        {
            if (path == null || path.Length == 0)
            {
                return data;
            }
            var head = path[0];
            if (head == envelopeKey)
            {
                var rest = new string[path.Length - 1];
                Array.Copy(path, 1, rest, 0, rest.Length);
                return SetAtPath(CloneMap(data), rest, version);
            }
            return data;
        }

        public void TrackOrderCompletedDefault(TrackOrderCompletedDefault properties)
        {
            var data = WithSchemaVersion(ToMap(properties), new string[] {"context", "protocols", "schemaVersion"}, "default", "properties");
            _analytics.Track("Order Completed", ToJsonObject(data));
        }

        public void TrackOrderCompleted(TrackOrderCompletedDefault properties)
        {
            TrackOrderCompletedDefault(properties);
        }
    }
}
"
`;

exports[`renderCSharp matches the snapshot for with-refs.json 1`] = `
"// Generated by @ht-sdks/events-cli@0.1.0 — do not edit.
// Requires peer Hightouch.Events.CSharp v0.0.6 or later.

using System;

using System.Collections;

using System.Collections.Generic;

using Hightouch.Events.Serialization;

using AnalyticsClient = Hightouch.Events.Analytics;

namespace Analytics
{
    public class IdentifyDefault
    {
        public object email;
    }

    public class TrackCartViewedDefault
    {
        public object itemCount;
        public object amount;
        public object currency;
    }

    public sealed class HtEvents
    {
        private readonly AnalyticsClient _analytics;



        public HtEvents(AnalyticsClient analytics)

        {

            _analytics = analytics;

        }



        private static Dictionary<string, object> CloneMap(Dictionary<string, object> map)
        {
            var clone = new Dictionary<string, object>();
            if (map == null)
            {
                return clone;
            }
            foreach (var entry in map)
            {
                clone[entry.Key] = entry.Value;
            }
            return clone;
        }

        private static Dictionary<string, object> SetAtPath(Dictionary<string, object> root, string[] path, string value)
        {
            if (path == null || path.Length == 0)
            {
                return root;
            }
            var clone = CloneMap(root);
            var cursor = clone;
            for (var i = 0; i < path.Length - 1; i++)
            {
                var key = path[i];
                Dictionary<string, object> child;
                if (cursor.TryGetValue(key, out var existing) && existing is Dictionary<string, object> dict)
                {
                    child = CloneMap(dict);
                }
                else
                {
                    child = new Dictionary<string, object>();
                }
                cursor[key] = child;
                cursor = child;
            }
            cursor[path[path.Length - 1]] = value;
            return clone;
        }

        private static Dictionary<string, object> ToMap(object value)
        {
            var result = new Dictionary<string, object>();
            if (value == null)
            {
                return result;
            }
            if (value is Dictionary<string, object> dict)
            {
                return CloneMap(dict);
            }
            foreach (var field in value.GetType().GetFields())
            {
                var fieldValue = field.GetValue(value);
                if (fieldValue == null)
                {
                    continue;
                }
                result[field.Name] = fieldValue;
            }
            return result;
        }

        private static JsonElement ToJsonElement(object value)
        {
            switch (value)
            {
                case null:
                    return JsonNull.Instance;
                case JsonElement element:
                    return element;
                case string s:
                    return s;
                case bool b:
                    return b;
                case byte n:
                    return (int)n;
                case short n:
                    return n;
                case int n:
                    return n;
                case long n:
                    return n;
                case float n:
                    return n;
                case double n:
                    return n;
                case decimal n:
                    return (double)n;
                case Dictionary<string, object> dict:
                    return ToJsonObject(dict);
                case IDictionary map:
                {
                    var nested = new Dictionary<string, object>();
                    foreach (DictionaryEntry entry in map)
                    {
                        if (entry.Key == null || entry.Value == null)
                        {
                            continue;
                        }
                        nested[entry.Key.ToString()] = entry.Value;
                    }
                    return ToJsonObject(nested);
                }
                default:
                    return value.ToString();
            }
        }

        private static JsonObject ToJsonObject(Dictionary<string, object> data)
        {
            var obj = new JsonObject();
            if (data == null)
            {
                return obj;
            }
            foreach (var entry in data)
            {
                obj[entry.Key] = ToJsonElement(entry.Value);
            }
            return obj;
        }

        private static Dictionary<string, object> WithSchemaVersion(Dictionary<string, object> data, string[] path, string version, string envelopeKey)
        {
            if (path == null || path.Length == 0)
            {
                return data;
            }
            var head = path[0];
            if (head == envelopeKey)
            {
                var rest = new string[path.Length - 1];
                Array.Copy(path, 1, rest, 0, rest.Length);
                return SetAtPath(CloneMap(data), rest, version);
            }
            return data;
        }

        public void IdentifyDefault(IdentifyDefault traits)
        {
            var data = WithSchemaVersion(ToMap(traits), new string[] {}, "default", "traits");
            _analytics.Identify(ToJsonObject(data));
        }

        public void IdentifyDefault(string userId, IdentifyDefault traits)
        {
            var data = WithSchemaVersion(ToMap(traits), new string[] {}, "default", "traits");
            _analytics.Identify(userId, ToJsonObject(data));
        }

        public void Identify(IdentifyDefault traits)
        {
            IdentifyDefault(traits);
        }

        public void Identify(string userId, IdentifyDefault traits)
        {
            IdentifyDefault(userId, traits);
        }

        public void TrackCartViewedDefault(TrackCartViewedDefault properties)
        {
            var data = WithSchemaVersion(ToMap(properties), new string[] {}, "default", "properties");
            _analytics.Track("Cart Viewed", ToJsonObject(data));
        }

        public void TrackCartViewed(TrackCartViewedDefault properties)
        {
            TrackCartViewedDefault(properties);
        }
    }
}
"
`;
